; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/scheduler/extr_sched_main.c_drm_sched_job_begin.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/scheduler/extr_sched_main.c_drm_sched_job_begin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_sched_job = type { i32, %struct.drm_gpu_scheduler* }
%struct.drm_gpu_scheduler = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_sched_job*)* @drm_sched_job_begin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drm_sched_job_begin(%struct.drm_sched_job* %0) #0 {
  %2 = alloca %struct.drm_sched_job*, align 8
  %3 = alloca %struct.drm_gpu_scheduler*, align 8
  %4 = alloca i64, align 8
  store %struct.drm_sched_job* %0, %struct.drm_sched_job** %2, align 8
  %5 = load %struct.drm_sched_job*, %struct.drm_sched_job** %2, align 8
  %6 = getelementptr inbounds %struct.drm_sched_job, %struct.drm_sched_job* %5, i32 0, i32 1
  %7 = load %struct.drm_gpu_scheduler*, %struct.drm_gpu_scheduler** %6, align 8
  store %struct.drm_gpu_scheduler* %7, %struct.drm_gpu_scheduler** %3, align 8
  %8 = load %struct.drm_gpu_scheduler*, %struct.drm_gpu_scheduler** %3, align 8
  %9 = getelementptr inbounds %struct.drm_gpu_scheduler, %struct.drm_gpu_scheduler* %8, i32 0, i32 0
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  %12 = load %struct.drm_sched_job*, %struct.drm_sched_job** %2, align 8
  %13 = getelementptr inbounds %struct.drm_sched_job, %struct.drm_sched_job* %12, i32 0, i32 0
  %14 = load %struct.drm_gpu_scheduler*, %struct.drm_gpu_scheduler** %3, align 8
  %15 = getelementptr inbounds %struct.drm_gpu_scheduler, %struct.drm_gpu_scheduler* %14, i32 0, i32 1
  %16 = call i32 @list_add_tail(i32* %13, i32* %15)
  %17 = load %struct.drm_gpu_scheduler*, %struct.drm_gpu_scheduler** %3, align 8
  %18 = call i32 @drm_sched_start_timeout(%struct.drm_gpu_scheduler* %17)
  %19 = load %struct.drm_gpu_scheduler*, %struct.drm_gpu_scheduler** %3, align 8
  %20 = getelementptr inbounds %struct.drm_gpu_scheduler, %struct.drm_gpu_scheduler* %19, i32 0, i32 0
  %21 = load i64, i64* %4, align 8
  %22 = call i32 @spin_unlock_irqrestore(i32* %20, i64 %21)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @drm_sched_start_timeout(%struct.drm_gpu_scheduler*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
